--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,12 +9,15 @@ en:
       project:
         one: "Proyecto"
         other: "Proyectos"
+      observation:
+        one: "Observación"
+        other: "Observaciones"
       user:
         one: "Usuario"
         other: "Usuarios"
     attributes:
       project:
-        project_name: "Nombre proyecto"
+        name: "Nombre proyecto"
         commune: "Comuna"
         origin_visit: "Origen de visita"
         date_visit: "Fecha de visita"
@@ -24,6 +27,9 @@ en:
         visit_id: "Codigo visita"
         visit_booklet: "Cartilla de visita"
         report_made: "Informe de cometido"
+        file: "Adjunto de cartilla de visita"
+        attachment: "Adjunto de informe de cometido"
+        observations: "Observaciones"
       observation:
         observation_detail: "Detalle de observaciones"
         action_plan: "Plan de acción GORE"
@@ -250,3 +256,153 @@ en:
       long: "%-d de %B de %Y %H:%M"
       short: "%-d de %b %H:%M"
     pm: pm
+  admin:
+    js:
+      true: Verdadero
+      false: Falso
+      is_present: Presente
+      is_blank: En blanco
+      date: Fecha ...
+      between_and_: Entre ... y ...
+      today: Hoy
+      yesterday: Ayer
+      this_week: Esta semana
+      last_week: Semana pasada
+      number: Numero ...
+      contains: Contiene
+      is_exactly: Es exactamente
+      starts_with: Comienza con
+      ends_with: Termina con
+      too_many_objects: "Demasiados objetos, utilize el buscador de abajo"
+      no_objects: "Objetos no encontrados"
+    loading: "Cargando..."
+    toggle_navigation: Activar navegación
+    home:
+      name: "Inicio"
+    pagination:
+      previous: "&laquo; Anterior"
+      next: "Siguiente &raquo;"
+      truncate: "…"
+    misc:
+      search: "Buscar"
+      filter: "Filtro"
+      refresh: "Actualizar"
+      show_all: "Mostrar todo"
+      add_filter: "Agregar filtro"
+      bulk_menu_title: "Items seleccionados"
+      remove: "Quitar"
+      add_new: "Agregar nueva"
+      chosen: "Escoger %{name}"
+      chose_all: "Escoger todo"
+      clear_all: "Limpiar todo"
+      up: "Arriba"
+      down: "Abajo"
+      navigation: "Navegación"
+      navigation_static_label: "Enlaces"
+      log_out: "Cerrar sesión"
+      ago: "atras"
+      more: "Más %{count} más %{models_name}"
+    flash:
+      successful: "%{name} correctamente %{action}"
+      error: "%{name} no pudo ser %{action}"
+      noaction: "Sin cambios realizados"
+      model_not_found: "El modelo '%{model}' no pudo ser encontrado"
+      object_not_found: "%{model} con el id, '%{id}', no fue encontrado"
+    table_headers:
+      model_name: "Nombre del modelo"
+      last_created: "Ultimo creado"
+      records: "Registros"
+      username: "Usuario"
+      changes: "Cambios"
+      created_at: "Fecha/Hora"
+      item: "Item"
+      message: "Mensaje"
+    actions:
+      dashboard:
+        title: "Sitio administrativo"
+        menu: "Dashboard"
+        breadcrumb: "Dashboard"
+      index:
+        title: "Lista de %{model_label_plural}"
+        menu: "Lista"
+        breadcrumb: "%{model_label_plural}"
+      show:
+        title: "Detalles para %{model_label} '%{object_label}'"
+        menu: "Mostrar"
+        breadcrumb: "%{object_label}"
+      show_in_app:
+        menu: "Mostrar en aplicación"
+      new:
+        title: "Nuevo %{model_label}"
+        menu: "Agregar nuevo"
+        breadcrumb: "Nuevo"
+        link: "Agregar nueva %{model_label}"
+        done: "Creado"
+      edit:
+        title: "Editar %{model_label} '%{object_label}'"
+        menu: "Editar"
+        breadcrumb: "Editar"
+        link: "Editar este %{model_label}"
+        done: "actualizado"
+      delete:
+        title: "Eliminar %{model_label} '%{object_label}'"
+        menu: "Eliminar"
+        breadcrumb: "Eliminar"
+        link: "Eliminar '%{object_label}'"
+        done: "Eliminado"
+      bulk_delete:
+        title: "Eliminado %{model_label_plural}"
+        menu: "Eliminado multiple"
+        breadcrumb: "Multiple eliminado"
+        bulk_link: "Eliminar %{model_label_plural}"
+      export:
+        title: "Exportar %{model_label_plural}"
+        menu: "Exportar"
+        breadcrumb: "Exportar"
+        link: "Exportar %{model_label_plural}"
+        bulk_link: "Exportar %{model_label_plural}"
+        done: "Exportado"
+      history_index:
+        title: "Historial para %{model_label_plural}"
+        menu: "Historial"
+        breadcrumb: "Historial"
+      history_show:
+        title: "Historial para %{model_label} '%{object_label}'"
+        menu: "Historial"
+        breadcrumb: "Historial"
+    form:
+      cancel: "Cancelar"
+      basic_info: "información basica"
+      required: "Requerido"
+      optional: "Opcional"
+      one_char: "Caracter"
+      char_length_up_to: "Longitud hasta"
+      char_length_of: "longitud de"
+      save: "Guardar"
+      save_and_add_another: "Guardar y agregar otro"
+      save_and_edit: "Guardar y editar"
+      all_of_the_following_related_items_will_be_deleted: "?, Los siguientes elementos relacionados se pueden eliminar:"
+      are_you_sure_you_want_to_delete_the_object: "Esta seguro que quiere eliminar "
+      confirmation: "Si, estoy seguro"
+      bulk_delete: "Se eliminarán los siguientes objetos, que pueden eliminar algunas de sus dependencias relacionadas:"
+      new_model: "%{name} (Nuevo)"
+    export:
+      confirmation: "Exportar a %{name}"
+      select: "Seleccionar campos a exportar"
+      select_all_fields: "Seleccionar todos los campos"
+      fields_from: "Campos para %{name}"
+      fields_from_associated: "Campos para la asociación %{name}"
+      display: "Mostrar %{name}: %{type}"
+      options_for: "Opciones para %{name}"
+      empty_value_for_associated_objects: "<vacio>"
+      click_to_reverse_selection: 'Click para revertir selección'
+      csv:
+        header_for_root_methods: "%{name}" # 'model' is available
+        header_for_association_methods: "%{name} [%{association}]"
+        encoding_to: "Codificar a"
+        encoding_to_help: "Elija la codificación de salida. Dejar vacío para dejar intacta la codificación de entrada actual: (%{name})"
+        skip_header: "Sin encabezado"
+        skip_header_help: "No emite un encabezado (sin descripción de campos)"
+        default_col_sep: ","
+        col_sep: "Separador de columna"
+        col_sep_help: "Dejar en blanco para valor por defecto ('%{value}')" # value is default_col_sep
